2004-09-22  Ulrich Drepper  <drepper@redhat.com>

	* string/string.h: Add __nonnull annotations.
	* stdlib/stdlib.h: Likewise.

2004-09-20  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/ia64/sysdep.h (DO_INLINE_SYSCALL):
	Renamed to ...
	(DO_INLINE_SYSCALL_NCS): This.
	(DO_INLINE_SYSCALL): New.
	(INLINE_SYSCALL): Updated.
	(INTERNAL_SYSCALL_NCS): Updated.

2004-09-21  Ulrich Drepper  <drepper@redhat.com>

	* elf/sprof.c (load_shobj): Add support for reading symbol table
	from debuginfo file.

	* elf/ldd.bash.in: Fix syntax errors.

2004-09-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/dl-execstack.c
	(_dl_make_stack_executable): Remove some duplication.

	* nscd/nscd.c (options): Mark S option as hidden.
	(parse_opt): When S option is used, print warning message.
	* nscd/grpcache.c (adgrptbyX): Don't handle secure mode.
	* nscd/hstcache.c (addhstbyX): Don't handle secure mode.
	* nscd/aicache.c (addhstaiX): Don't handle secure mode.
	* nscd/pwdcache.c (addpwbyX): Don't handle secure mode.

2004-09-20  Roland McGrath  <roland@frob.com>

	* elf/dl-load.c (__stack_prot): Only use PROT_GROWSUP/PROT_GROWSDOWN
	in initializer #if defined.

2004-09-18  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #391]
	* stdlib/getsubopt.c: Merge fixes from gnulib.
	(__strchrnul) [!_LIBC]: Define and include "strchrnul.c".
	(getsubopt): Use prototypes, not K&R style.
	Fix bug: memcmp(A,B,N) was being invoked on a memory block B
	whose size might be smaller than N.  Use strncmp to avoid the bug.

2004-09-20  Ulrich Drepper  <drepper@redhat.com>

	* configure.in: If selinux has not explictly been requested, don't
	comment on it missing.

	* elf/dl-load.c: Define __stack_prot.
	* sysdeps/unix/sysv/linux/dl-execstack.c: Don't define
	__stack_prot here, just declare it.

2004-09-20  Jakub Jelinek  <jakub@redhat.com>

	* configure.in (libc_cv_z_relro): Only set to yes if linker script
	contains DATA_SEGMENT_RELRO_END.
